# cloudmusic-cli

./: .gitignore  AGENTS.md  NOTICE  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
native/smtc/: Cargo.toml
native/smtc/src/: main.rs
scripts/: build-native.mjs  clean-dist-js.mjs
src/: cli.ts  version.ts
src/api/: lyric-upgrade.ts  netease.ts  qqmusic.ts  qrc.ts  tripledes.ts
src/audio/: local-library.ts  mpv-ipc.ts  pipeline.ts  spectrum.ts
src/core/: cookie.ts  errors.ts  lyric-match.ts  lyrics.ts  paths.ts  store.ts  types.ts
src/daemon/: player-daemon.ts
src/ipc/: client.ts  server.ts
src/mcp/: server.ts
src/system/: classlink.ts  smtc.ts
src/tui/: controls.ts  layout.ts  lyric-highlight.ts  now-playing.tsx  rendering.ts  spectrum-visualizer.ts
test/: classlink.test.ts  controls.test.ts  cookie.test.ts  layout.test.ts  lyric-highlight.test.ts  lyrics.test.ts  normalize-song.test.ts  package.test.ts  spectrum-visualizer.test.ts  spectrum.test.ts  tui-rendering.test.ts
